# Studies_2-1

./: README.md
Computer Organization and Architecture/: .~lock.230041129_NPU-Assignment.odt#  230041129_NPU-Assignment.odt
Computer Organization and Architecture/Resources/: CPU_datapath.drawio
Data-Structures/Assigment/: 230041129_T01_L11-12  230041129_T01_L11-12.cpp  230041129_T02_L11-12  230041129_T02_L11-12.cpp  230041129_T03_L11-12  230041129_T03_L12  230041129_T03_L12.cpp  230041129_T04_L11-12  230041129_T04_L11-12.cpp  230041129_T05_L12  230041129_T05_L12.cpp  230041129_T07_L12  230041129_T07_L12.cpp  230041129_T08_L12  230041129_T08_L12.cpp  230041129_T08_L12_self  230041129_T08_L12_self.cpp  230041129_T09_L12  230041129_T09_L12.cpp
Data-Structures/Finals-Practice/: dfs.cpp  disjoinset  disjoinset.cpp
Data-Structures/L09/: 230041129_L09_T11  230041129_T01_L09.cpp  230041129_T02_L09.cpp  230041129_T03_L09.cpp  230041129_T04_L09.cpp  230041129_T05_L09.cpp  230041129_T06_L09  230041129_T06_L09.cpp  230041129_T07_L09.cpp  230041129_T08_L09  230041129_T08_L09.cpp  230041129_T09_L09  230041129_T09_L09.cpp  230041129_T10_L09  230041129_T10_L09.cpp  230041129_T11_L09  230041129_T11_L09.cpp
Data-Structures/L10/: 230041129_T01_L10  230041129_T01_L10.cpp  230041129_T02_L10  230041129_T02_L10.cpp  230041129_T03_L10  230041129_T03_L10.cpp  230041129_T04_L10  230041129_T04_L10.cpp
Data-Structures/L11/: 230041129_T01_L11.cpp  230041129_T02_L11.cpp  230041129_T03_L11.cpp  (+2 more)
OOP/TUI/: CMakeLists.txt  baseScreen.cpp  dashboard.cpp  main.cpp  screen.cpp  signup.cpp
(+71 files in other folders)
